fixed names of methods